# conmon-v3

./: .cirrus.yml  .gitignore  .packit-copr-rpm.sh  .packit.yaml  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: test.yml
.rpmbuild/: Makefile  prepare.sh
conmon-abi/: Cargo.toml  build.rs  cbindgen.toml
conmon-abi/src/: lib.rs
contrib/packit-tmt/: update-deps.sh
contrib/spec/: conmon-v3.spec.in
docs/: Makefile  conmon.8.md
include/: conmon_log_plugin.h
log_plugins/none_log_plugin/: Cargo.toml
log_plugins/none_log_plugin/src/: lib.rs
plans/: main.fmf
rpm/: conmon-v3.spec
src/: cli.rs  exit.rs  lib.rs  log.rs  log_plugin.rs  main.rs  parent_pipe.rs  unix_socket.rs
src/commands/: create.rs  exec.rs  mod.rs  restore.rs  run.rs  version.rs
src/error/: mod.rs
src/logging/: file_logger.rs  journald_logger.rs  mod.rs  none_logger.rs  plugin.rs
src/runtime/: args.rs  cgroup.rs  ctl.rs  mod.rs  process.rs  run.rs  session.rs  stdio.rs
test/tmt/: debug-common.sh  e2e.sh  main.fmf  podman.sh
